--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/geoapi/dideliver",
   "dependencies": {
+    "cors": "^2.4.2",
     "fortune": "^0.2.4",
     "fortune-mongodb": "^0.2.2",
     "migrate": "^0.1.4"
